# FEUP_AEDA

./: README.md
Practical Evaluations/aeda1819_ci1/Tests/: Account.cpp  Account.h  Bank.cpp  Bank.h  BankOfficer.cpp  BankOfficer.h
Practical Evaluations/aeda1819_ci2/Tests/: CSimpleList.h  CStack.h  Kart.cpp
Practical Evaluations/aeda1819_ci3/Tests/: Client.cpp  Client.h  PropertyTypeItem.cpp  REAgency.cpp  REAgency.h  tests.cpp
Practical Evaluations/aeda1920_ci1/Tests/: Hotel.h  Room.cpp  tests.cpp
Practical Evaluations/aeda1920_ci2/Tests/: Box.cpp  ThinTallBox.cpp  ThinTallBox.h  Warehouse.cpp  Warehouse.h  WideFlatBox.cpp  tests.cpp
Practical Evaluations/aeda1920_ci3/Tests/: Gallery.cpp  Gallery.h  Paint.cpp  tests.cpp
Practical Evaluations/aeda2021_ci1/: main.cpp
Practical Evaluations/aeda2021_ci1/Tests/: call.cpp  call.h  callCenter.cpp  callCenter.h  callCenterAgent.cpp  callCenterAgent.h  tests.cpp
Practical Evaluations/aeda2021_ci2/: CMakeLists.txt  main.cpp
Practical Evaluations/aeda2021_ci2/Tests/: Client.cpp  Client.h  Courier.cpp  Courier.h  MealCourier.cpp  MealCourier.h  Order.cpp  Order.h  Restaurant.cpp  Restaurant.h  tests.cpp
Weekly Assignments/Week 1/: main.cpp  parque.cpp  tests.cpp
Weekly Assignments/Week 1/Tests/: parque.h
Weekly Assignments/Week 10/Tests/: box.cpp  packagingMachine.cpp  tests.cpp
Weekly Assignments/Week 2/: fleet.cpp  fleet.h  vehicle.cpp
Weekly Assignments/Week 2 - extra/: CMakeLists.txt
Weekly Assignments/Week 2 - extra/Tests/: animal.cpp  animal.h  tests.cpp  veterinary.cpp  veterinary.h  zoo.cpp
(+17 files in other folders)
